Sun Nov 12 22:15:35 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkfileselection.c, gdk/win32/gdkfont-win32.c: 
	g_filename_{to,from}_utf8 now takes an extra parameter.

	* gtk/gtkcalendar.c (gtk_calendar_init): Convert output of
	strftime into UTF-8.

	(column_from_x, gtk_calendar_paint_day_names): Support RTL
	calendars.

	(gtk_calendar_paint_day_names): Draw day names in the right 
	place.
	
Sun Nov 12 14:10:09 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkselection-x11.c (gdk_utf8_to_compound_text): Fix
	problem with using result of g_get_charset() backwards -
	pointed out by Mikael Hermansson <mikeh@bahnhof.se>.

	* gtk/gtkwindow.c (gtk_window_compute_hints): Support
	negative min_width/height and max_width/height to
	mean "requisition"; this allows setting a window
	to be user-resizable in only one direction easily.

	* gtk/testgtk.c (create_main_window): Remove hard-coded
	usize - set a default size in the vertical direction.

Sun Nov 12 13:33:01 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c: Add some missing casts. Support 
	2 and 3 button clicks on the arrows to mean 
	"move by pages" and "jump to end". (Like gtkspinbutton)

2000-11-12 Hans Breuer <Hans@Breuer.Org>

	* gdk/win32/makefile.msc : reflect build module changes

	* gdk/win32/gdkcursor-win32.c : can't cast to impl type directly
	from GdkPixmap*, cast implementation member instead.

	* gdk/win32/gdkdrawable-win32.c (gdk_win32_draw_drawable) : The
	passed in drawable is of type GdkDrawableImplWin32, the GdkPixmap *src 
	maybe either GdkDrawable or GdkDrawableImpl. Corrected all casts, add
	more Gdi functions return value checking. 
	(gdk_win32_draw_image) : use IMAGE_PRIVATE_DATA to get on the
	GdkImagePrivateWin32 *.

	* gdk/win32/gdkevents-win32.c : Disable the SetCapture call to make
	menus useable again. Add #pragma message to keep reminded on this issue.
	(gdk_event_translate) : don't generate GDK_EXPOSE events for InputOnly