@@ -1,3 +1,12 @@
+Sun Nov 12 22:52:51 2000  Robert Brady  <robert@suse.co.uk>
+
+	* modules/input/imviqr.c: A vietnamese VIQR-based input method.
+
+	* modules/input/imthai-broken.c: A Thai input method for use if
+	Thai keys are really generating Latin1 keysyms.
+
+	* modules/input/Makefile.am: Build these.
+
 Sun Nov 12 22:15:35 2000  Robert Brady  <robert@suse.co.uk>
 
 	* gtk/gtkfileselection.c, gdk/win32/gdkfont-win32.c: 
